# basic-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  test-cmd-method-chaining.roc  test-static-dispatch.roc
.github/workflows/: ci.yml  release.yml
ci/: all_tests.sh
ci/expect_scripts/: dir-test.exp  env-test.exp  file-test.exp  path.exp  print-test.exp
crates/roc_command/src/: lib.rs
examples/: dir-test.roc  env-test.roc  file-test.roc  locale.roc  path.roc  print-test.roc  random.roc
platform/: Cmd.roc  Dir.roc  File.roc  Path.roc  Stderr.roc  Stdin.roc  Stdout.roc  main.roc
src/: lib.rs  main.rs
