[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
repository = "https://github.com/roc-lang/basic-cli"

[lib]
name = "host"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
roc_std_new.workspace = true
roc_io_error.workspace = true
roc_random.workspace = true
roc_command.workspace = true
memoffset = "0.9.1"

[workspace]
members = [
    "crates/roc_io_error",
    "crates/roc_random",
    "crates/roc_command",
]

[workspace.package]
authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
version = "0.0.1"
repository = "https://github.com/roc-lang/basic-cli"

[workspace.dependencies]
# Core Roc types
roc_std_new = { git = "https://github.com/roc-lang/roc", rev = "386a79b49fd6d46075bf5bb562e57062e6a53c79" }

# Internal crates
roc_io_error = { path = "crates/roc_io_error" }
roc_random = { path = "crates/roc_random" }
roc_command = { path = "crates/roc_command" }

# External dependencies
getrandom = "0.2"
sys-locale = "0.3"
libc = "0.2"

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
